# REPO

beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/launch/: pr2_world.launch~  turtlemimic.launch
beginner_tutorials/srv/: msg_trajectory.srv~
ltlplanner/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ltlplanner/action/: lowcontrol.action  lowcontrol_step.action  lowplan.action  planningRRT.action
ltlplanner/launch/: lowcontroller_srv.launch  manager_launcher.launch  manager_levels.launch  planner_launcher.launch  publishers_launcher.launch  system_launcher.launch  system_levels.launch
ltlplanner/models/: BOX_A.dae  PRUEBA_1.dae
ltlplanner/msg/: ROI_edge.msg  ROI_graph.msg  ROI_node.msg  automaton.msg  automaton.msg~  automaton_msg.msg  automaton_msg.msg~  edge.msg  goal.msg  goal.msg~  goal_msg.msg  map_state.msg  map_state.msg~  object.msg  plan.msg  plan_msg.msg  region.msg  region.msg~  region_msg.msg  state.msg  state.msg~  task.msg  task.msg~  transition.msg  transition.msg~
ltlplanner/src/: LTLompl_test.cpp  highplanner_client.cpp  highplanner_srv.cpp  lowcontroller_angle_srv.cpp  lowcontroller_client.cpp  lowcontroller_fwd_srv.cpp  lowcontroller_srv.cpp  lowplanner_client.cpp  lowplanner_srv.cpp  manager.cpp  manager.cpp~  manager_levels.cpp  planner_manager.cpp  planner_manager_client.cpp  pose_publisher.cpp  pub_areas.cpp~  pub_automaton.cpp  pub_automaton_2.cpp  pub_goal.cpp  pub_goal.cpp~  pub_region.cpp  pub_region.cpp~  region_manager_client.cpp  region_manager_srv.cpp
ltlplanner/srv/: RM_ROIgraphGen.srv  RM_getAllRegions.srv  RM_getNeighboursofRegion.srv  RM_getRegionwithPoint.srv  RM_inRegion.srv  RM_middlePointofRegion.srv  RM_worldLimits.srv
pr2_gazebo_ltl/: CMakeLists.txt  CMakeLists.txt~  package.xml~
pr2_gazebo_ltl/launch/: pr2_base_control.launch  pr2_base_control.launch~  pr2_empty_world.launch~  pr2_solo.launch  pr2_world.launch  pr2_world.launch~
pr2_gazebo_ltl/models/: world_setup.world
pr2_gazebo_ltl/src/: pr2_base_control_pub.cpp  pr2_base_control_pub.cpp~  pr2_ltl_base_controller.cpp~  pr2_r_gripper_control_pub.cpp  pr2_r_gripper_control_pub.cpp~  simple_trajectory.cpp  simple_trajectory.cpp~
pr2_moveit_config_plus/: .setup_assistant  CMakeLists.txt  package.xml
pr2_moveit_config_plus/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kinematics.yaml~  ompl_planning.yaml  pr2.srdf  pr2.srdf~
pr2_moveit_config_plus/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  pr2_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pr2_moveit_ltl/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pr2_moveit_ltl/action/: pr2_base_controller_ltl.action
pr2_moveit_ltl/launch/: base_planner_client.launch  base_planner_client.launch~  base_planner_test.launch  base_queue.launch  base_queue.launch~  control_arm.launch  control_base.launch  controller_example.launch  ltl.launch  pr2_base.launch  show.launch  show.launch~
pr2_moveit_ltl/models/: ENV_6.dae  place.txt.scene
pr2_moveit_ltl/msg/: area_proposition.msg  area_proposition.msg~  automaton.msg  automaton.msg~  baseState.msg  baseState.msg~  edge.msg  plan.msg  plan_msg.msg  plan_msg.msg~  proposition.msg  proposition.msg~  stage.msg~  state.msg  state.msg~  transition.msg  transition.msg~
pr2_moveit_ltl/src/: adding_mesh.cpp~  automata_generator.cpp  automata_generator.cpp~  base_controller.cpp  base_controller.cpp~  base_controller_display.cpp  base_controller_display.cpp~  base_state_display.cpp  base_state_display.cpp~  controller_example.cpp  controller_example.cpp~  controller_example_arm.cpp  controller_example_arm.cpp~  controller_server.cpp  manager_ltl.cpp  manager_ltl.cpp~  move_arm_planner.cpp  move_arm_planner.cpp~  move_base_planner.cpp  move_base_planner.cpp~  move_base_planner2.cpp  moveit_example.cpp~  plan_gen_client.cpp  plan_gen_client.cpp~  plan_generator.cpp  plan_generator.cpp~  plan_generator2.cpp~  planner_client.cpp  planner_client.cpp~  planner_client_back.cpp  pr2_base_controller.cpp  pr2_base_controller.cpp~  pr2_base_controller_client.cpp  pr2_base_controller_client.cpp~  pr2_base_controller_srv.cpp  pr2_base_controller_srv.cpp~  pr2_base_controller_srv_angle.cpp  pr2_base_controller_srv_fwd.cpp  pr2_base_controller_srv_fwd.cpp~  pr2_moveit_ltl_planner.cpp  (+9 more)
pr2_moveit_ltl/srv/: automaton_gen_msg.srv  automaton_gen_srv.srv~  dijkstra_msg.srv  dijkstra_msg.srv~  task_queue_msg.srv~
